Add templates and CSS

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>EDA Phase 1 Express Boilerplate</title>
+    <title>FriendZone</title>
   </head>
   <body>
     <ul>
-    {{#each users}}
-      <li>{{name}} ({{email}})</li>
-    {{/each}}
+    {{{body}}}
     </ul>
   </body>
 </html>
