--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,10 +2,10 @@
 <html>
   <head>
     <title>FriendZone</title>
+    <LINK href="./public/main.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Work+Sans:600" rel="stylesheet">
   </head>
   <body>
-    <ul>
     {{{body}}}
-    </ul>
   </body>
 </html>
