edited form.hbs button tag

--- a/views/form.hbs
+++ b/views/form.hbs
@@ -7,6 +7,6 @@
         </div>
         {{/each}}
         <input type="text" name="name">
-        <button>Find Friends!</button>
+        <button type="submit" value="submit">Find Friends!</button>
     </form>
 </div>
