--- a/views/listpeople.hbs
+++ b/views/listpeople.hbs
@@ -1,7 +1,7 @@
 <h1> FriendZone </h1>
 
 <p> It's hard to make friends these days. Here are some people who are looking to make friends in your city</p>
-
+{{!-- 
 <div class="grid">
 {{#each people}}
     <div class="card">
@@ -47,4 +47,4 @@
 
     </div>
 {{#each people}}
-</div>
+</div> --}}
