--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -2,10 +2,11 @@
 <html>
   <head>
     <title>FriendZone</title>
-    <LINK href="./public/main.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:600" rel="stylesheet">
+    <link rel="stylesheet" href="/main.css">
   </head>
   <body class = 'border'>
+    <h1> HELLOO </h1>
     {{{body}}}
   </body>
 </html>
