--- a/views/listpeople.hbs
+++ b/views/listpeople.hbs
@@ -1,6 +1,19 @@
-<h1> FriendZone </h1>
 
-<p> It's hard to make friends these days. Here are some people who are looking to make friends in your city</p>
+<p> It's hard to make friends these days. Find a friend who match your interests! </p>
+
+<div class="grid">
+    <div class="card">
+        <h2> Luke </h2>
+         <h3>hello</h3>
+         <h3>hello</h3>
+    </div>
+     <div class="card">
+        <h2> Nanz </h2>
+         <h3>Make</h3>
+         <h3>Do</h3>
+    </div>
+</div>
+
 {{!-- 
 <div class="grid">
 {{#each people}}
