--- a/views/form.hbs
+++ b/views/form.hbs
@@ -1,9 +1,10 @@
 <div class="wrapper">
     <form method="POST" >
-        {{#each hobby}}
+        {{#each interests}}
         <div class="hobbies">
-            <img src="./public/{{image_id}}">
-            <input type="checkbox" name="{{hobby_name}}">
+            <img src="./images/{{image}}">
+            <label for="{{interest}}">{{interest}}</label>
+            <input type="checkbox" id="{{interest}}" name="{{interest}}">
         </div>
         {{/each}}
         <input type="text" name="name">
