--- a/public/main.css
+++ b/public/main.css
@@ -1,9 +1,10 @@
 body {
     font-family: 'Work Sans', sans-serif;
+    margin: 0 auto;
 }
 
 h1 {
-    font-size: 73px;
+    font-size: 56px;
     font-weight: 600;
     text-align: center;
 }
@@ -18,26 +19,38 @@ h3 {
 
 
 p {
-    font-size: 18px;
-    text-align: center;  
+    font-size: 20px;
+    text-align: center; 
+    padding: 20px
+}
+
+.container {
+    width: 1110px;
+    text-align: center;
+    margin: 0 auto;
 }
 
 
-
-
-.grid {
+.grid { 
     display: grid;
-    grid-gap: 15px;
-    grid-template-rows: repeat(auto-fit, 266px);
+    grid-gap: 30px;
+    grid-template-columns: repeat(auto-fit, 350px);   
+    text-align: left;
+    margin: 0 auto;
+   
 }
 
 .card {
-    border: 5px #000;
-    padding: 2px 16px;
+    border: 8px solid #000;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    padding: 2px 15px;
 }
   
 .card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0);
+    box-shadow: 11px 11px 0 rgb(0, 0, 0);
+    cursor: url('./images/peace.png'), auto;
 }
 
 
@@ -53,9 +66,36 @@ p {
     box-sizing: border-box;
 }
 
+hr {
+    border: 5px solid;
+}
+
 
 .wrapper {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 1em;
+}
+
+
+input {
+    padding: 12px;
+    font-family: 'Work Sans', sans-serif;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+button {
+    padding: 10px;
+    box-shadow: 5px 5px 0 rgb(0, 0, 0);
+    font-family: 'Work Sans', sans-serif;
+    font-size: 20px;
+    font-weight: 600;
+    border: 3px solid #000;
+}
+
+button:hover {
+    background-color: #000;
+    color: white;
+    cursor: pointer;
 }
