images are showing now

--- a/views/listpeople.hbs
+++ b/views/listpeople.hbs
@@ -1,6 +1,11 @@
 <h1> FriendZone </h1>
 
 <p> It's hard to make friends these days. Here are some people who are looking to make friends in your city</p>
+
+{{#each people}}
+
+
+
 {{!-- 
 <div class="grid">
 {{#each people}}
