--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -5,7 +5,7 @@
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:600" rel="stylesheet">
     <link rel="stylesheet" href="/main.css">
   </head>
-  <body class = 'border'>
+  <body>
     <h1> HELLOO </h1>
     {{{body}}}
   </body>
