--- a/views/listpeople.hbs
+++ b/views/listpeople.hbs
@@ -7,6 +7,7 @@
     <div class="grid">
         <div class="card">
             <h2> Luke </h2>
+            
             <hr>
             <h3>hello</h3>
             <h3>hello</h3>
@@ -20,20 +21,15 @@
             <h2> Luke </h2>
             <h3>hello</h3>
             <h3>hello</h3>
-        </div>
-        <div class="card">
-            <h2> Nanz </h2>
-            <h3>Make</h3>
-            <h3>Do</h3>
-        </div>
     </div>
 
-    {{!-- 
-    <div class="grid">
-    {{#each people}}
+    
+    {{!-- <div class="grid">
+        {{#each people}}
         <div class="card">
         
             <h2>{{name}}</h2> 
+            <hr>
                 <br>
                     {{#if basketball}}
                     <h3>Basketball</h3>
@@ -73,7 +69,7 @@
                 <br>
 
         </div>
-    {{#each people}}
+        {{#each people}}
     </div> --}}
 
 </div>
