--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/main.css">
   </head>
 
-  <body class = 'border'>
+  <body>
     <h1> FriendZone </h1>
     <hr>
 
