--- a/public/main.css
+++ b/public/main.css
@@ -73,8 +73,8 @@ hr {
 
 .wrapper {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 1em;
+    grid-template-columns: 30% 30% 30%;
+    grid-gap: 3em;
 }
 
 
@@ -98,4 +98,9 @@ button:hover {
     background-color: #000;
     color: white;
     cursor: pointer;
+}
+
+img {
+    width: 300px;
+    height: 200px;
 }
