list style is working

--- a/public/main.css
+++ b/public/main.css
@@ -100,3 +100,5 @@ button:hover {
     cursor: pointer;
 }
 
+a:visited { text-decoration: none; color:black; }
+a:hover { text-decoration: none; color:black }
