--- a/views/listpeople.hbs
+++ b/views/listpeople.hbs
@@ -5,28 +5,16 @@
 
 
     <div class="grid">
-        <div class="card">
-            <h2> Luke </h2>
-            
+       
+     {{#each people}}
+    <div class="grid">
+       <div class="card">
+            <h2> Luke - delete me</h2>
             <hr>
             <h3>hello</h3>
             <h3>hello</h3>
         </div>
-        <div class="card">
-            <h2> Nanz </h2>
-            <h3>Make</h3>
-            <h3>Do</h3>
-        </div>
-        <div class="card">
-            <h2> Luke </h2>
-            <h3>hello</h3>
-            <h3>hello</h3>
-    </div>
-
-    
-    {{!-- <div class="grid">
-        {{#each people}}
-        <div class="card">
+        <a href="/friends/id"><div class="card">
         
             <h2>{{name}}</h2> 
             <hr>
@@ -68,8 +56,8 @@
                     {{/if}}  
                 <br>
 
-        </div>
-        {{#each people}}
-    </div> --}}
-
+        </div></a>
+    
+    </div>    
+    {{/each}}
 </div>
