parsed the form correctly

--- a/views/listpeople.hbs
+++ b/views/listpeople.hbs
@@ -2,7 +2,7 @@
 
 <p> It's hard to make friends these days. Here are some people who are looking to make friends in your city</p>
 
-{{#each people}}
+{{!-- {{#each people}} --}}
 
 
 
